2015.04.21 - version 1.0.6

* Support for multipackaging. Available when only SERVICEPAKKE is selected.

YYYY.MM.DD - version 1.0.0

* Initial release.